style/home.css
.home {
  padding: 30px;
  padding-top: 8vh;
  background-color: var(--color-bg);
  border-top-right-radius: 7px;
  border-bottom-right-radius: 7px;
}

.home section {
  margin-top: 40px;
}

.home * h2 {
  color: var(--color-primary);
  font-size: 1.3em;
  font-weight: bold;
}

.home * ul {
  margin: 0;
  padding-left: 15px;
  margin-top: 10px;
}

.home * ul li {
  color: var(--color-secondary);
  position: relative;
}

.home * ul li h3 {
  color: var(--color-font-black);
  margin-bottom: 0;
  font-size: 1em;
}

.home * ul li h4 {
  color: var(--color-font-grey-light);
  margin-top: 8px;
  font-size: 1em;
}

.home * ul li time {
  position: absolute;
  right: 0;
  top: 0;
  color: var(--color-font-grey);
  font-weight: bold;
  font-size: 1em;
}

.home * .list-techs {
  margin-bottom: 40px;
}

.home * .list-techs li p {
  color: var(--color-font-grey-light);
  font-size: 0.9em;
  font-weight: lighter;
}

@media (max-width: 1400px) {
  .home {
    border-top-right-radius: 0px;
    border-bottom-right-radius: 0px;
  }
}

@media (max-width: 1170px) {
  .home * ul li h4 {
    margin-bottom: 8px;
  }

  .home * ul li time {
    position: relative;
    margin-top: 0;
  }
}

